--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<ul class="top-nav">
 		<li><a href="https://mail.google.com/mail/?tab=wm">Gmail</a></li>
 		<li><a href="https://www.google.fi/imghp?hl=fi&tab=wi">Kuvahaku</a></li>
-		<li><a id="kirjaudu" href="https://accounts.google.com/ServiceLogin?hl=fi&passive=true&continue=https://www.google.fi/%3Fgfe_rd%3Dcr%26dcr%3D0%26ei%3D3UfTWvv9O-a7ygXQuaHYBw">Kirjaudu Sisään</a></li>
+		<li class="kirjaudu"><a href="https://accounts.google.com/ServiceLogin?hl=fi&passive=true&continue=https://www.google.fi/%3Fgfe_rd%3Dcr%26dcr%3D0%26ei%3D3UfTWvv9O-a7ygXQuaHYBw">Kirjaudu Sisään</a></li>
 	</ul>
 	
 
@@ -36,8 +36,13 @@
 				</p>
 
 			</form>
+			
 
 	</center>
+
+	<div class="footer1">	
+		hi
+	</div>
 		
 
 
