Modified the top footer bar and the bottom footer bar. Added text to the bottom footer bar.

--- a/index.html
+++ b/index.html
@@ -40,8 +40,20 @@
 
 	</center>
 
-	<div class="footer1">	
-		hi
+
+	<div class="footer">
+		<div class="footer1">	
+			<a href="">Suomi</a>
+		</div>
+
+		<div class="botfooter">
+			<a class="botfootertext" href="">Mainokset</a>
+			<a class="botfootertext" href="">Yritykset</a>
+			<a class="botfootertext" href="">Tietoja</a>
+			<a class="botfootertext2" href="">Tietosuoja</a>
+			<a class="botfootertext2" href="">Käyttöehdot</a>
+			<a class="botfootertext2" href="">Asetukset</a>
+		</div>
 	</div>
 		
 
